<resources>
    <string name="app_name">Autopaper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="get_started">Get Started</string>
    <string name="hi_there">Hi There! 👋</string>
    <string name="welcome_back_sign_in_to_your_account">Welcome back, Sign in to your account</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="_continue">Continue</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="activate_account">Activate Account</string>
    <string name="for_the_purpose_of_industry_regulation_your_details_are_required">For the purpose of industry regulation, your details are required.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="e_g_1234">e.g 1234</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email_address_to_receive_a_reset_code">Enter your email address to receive a reset code</string>
    <string name="send_code">Send Code</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_terms_amp_conditions"><![CDATA[I agree to terms & conditions]]></string>
    <string name="default_notification_channel_id">Cloud Notification</string>
    <string name="default_notification_channel_name">AutoPaper Notification</string>
    <string name="vehicle_registration_and_renewal_made_easy">Vehicle registration and renewal made easy…</string>
    <string name="become_fast_and_efficient">Become fast and efficient.</string>
    <string name="automated_free_reminders">"Automated free reminders "</string>
    <string name="what_would_you_like_to_do_today">What would you like to do today?</string>
    <string name="commission_balance">Commission Balance</string>
    <string name="complete_sign_up_by_setting_up_profile">Complete signup by setting up profile</string>
    <string name="renew_vehicle_papers">Renew Vehicle Papers</string>
    <string name="new_vehicle_registration">New Vehicle Registration</string>
    <string name="other_vehicle_papers">Other Vehicle Papers</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="refer_amp_earn_1_000_00"><![CDATA[Refer & Earn ₦1,000.00]]></string>
    <string name="referral_text">When you invite a friend to Autopaper using your invite link, you get one month free on your subscription.</string>
    <string name="withdraw">Withdraw</string>
    <string name="transactions">Transactions</string>
    <string name="on_going_registration_vehicle">Ongoing Registration Vehicle</string>
    <string name="registered_vehicles">Registered vehicles</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="vehicle">Vehicle</string>
    <string name="personal_details">Personal Details</string>
    <string name="edit_your_personal_details">Edit your personal details</string>
    <string name="plus">+</string>
    <string name="bank_details">Bank Details</string>
    <string name="add_a_bank_account_to_withdraw_your_commission">Add a bank account to withdraw your commission</string>
    <string name="security">Security</string>
    <string name="logout">Logout</string>
    <string name="edit_personal_details">Edit Personal Details</string>
    <string name="take_a_selfie">Take a selfie</string>
    <string name="full_name">Full name*</string>
    <string name="name_hint">e.g Samson Achiaga</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_hint">e.g 08136108482</string>
    <string name="email_hint">e.g samson@autopaper.com</string>
    <string name="select_state">Select State</string>
    <string name="state_hint">e.g Oyo</string>
    <string name="town_residence_hint">e.g Owolabani</string>
    <string name="town_of_residence">Town of residence</string>
    <string name="home_address">Home address</string>
    <string name="save">Save</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_hint">e.g Access Bank</string>
    <string name="account_number">Account Number</string>
    <string name="account_number_hint">e.g 0123456789</string>
    <string name="name">Name</string>
    <string name="no_vehicle_added_yet">No Vehicle added yet</string>
    <string name="vehicle_reg_no"><u>Vehicle reg. no.</u></string>
    <string name="vehicle_reg_no_hint">e.g ZXY123AB</string>
    <string name="chassis_number"><u>VIN/Chassis Number</u></string>
    <string name="owners_info">Owners Info</string>
    <string name="expiry_dates">Expiry Dates</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="add_vehicle_button">Add Vehicle Button</string>
    <string name="reg_no">Reg. no</string>
    <string name="year">Year</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="required">Required</string>
    <string name="customs_paper_or_receipt_showing_vin_chassis_number_amp_two_phone_numbers"><![CDATA[Customs Paper or Receipt (showing VIN / Chassis Number) & Two phone numbers]]></string>
    <string name="timeline">Timeline</string>
    <string name="new_registration_takes_48_hours_but_with_tint_permit_it_will_take_96_hours_with_next_day_delivery">New Registration takes 48 hours (but with Tint Permit, it will take 96 hours) with next-day delivery</string>
    <string name="next">Next</string>
    <string name="new_vehicle_papers">New Vehicle Papers</string>
    <string name="preferences">Preferences</string>
    <string name="documents">Documents</string>
    <string name="comprehensive_insurance">Comprehensive Insurance</string>
    <string name="it_takes_2_days_to_get_the_temporary_driving_document_and_40_days_to_get_the_original_license">It takes 2 days to get the temporary driving document and 40 days to get the original license</string>
    <string name="you_need_to_upload_your_passport_photograph_and_a_clear_picture_of_your_current_expired_driver_s_license">You need to upload your passport photograph and a clear picture of your current expired driver\'s license</string>
    <string name="drivers_licence_renewal">Drivers Licence Renewal</string>
    <string-array name="states">
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Eboyin</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Kastina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
        <item>Abuja</item>
    </string-array>
</resources>